# marcus

./: .gitignore  .pylintrc  ACTUAL_STATUS.md  ARCHITECTURE_ROADMAP.md  COMMIT_MESSAGE_v050.txt  COMPLETION_REPORT.md  DOCUMENTATION_INDEX.md  ERROR_RESOLUTION_SUMMARY.md  FINAL_SUMMARY_V048.md  HANDOFF_V048.md  LAUNCH_V040.md  LICENSE  MARCUS_READY_FOR_TESTING.md  QUICKSTART.md  QUICK_REFERENCE_V02.md  README.md  README_PIN_WINDOWS.md  README_V02.md  SECURITY.md  SENIOR_CODE_QUALITY_COMPLETE.md  SESSION_12_SUMMARY.md  UI_ARCHITECTURE.md  UI_LAYOUT_PREVIEW.md  UI_OVERHAUL_SUMMARY.md  UI_QUICKSTART.md  UI_TEST_CHECKLIST.md  V02_BUILD_SUMMARY.md  V036_AUTH_WALL_COMPLETE.md  V037_QUICK_REFERENCE.md  V037_SEARCH_COMPLETE.md  V038_BLUEPRINT_COMPLETE.md  V038_QUICK_REFERENCE.md  V039_DEPLOYMENT_CHECKLIST.md  V039_IMPLEMENTATION_SUMMARY.md  V039_PROJECTS_COMPLETE.md  V03_SEARCH_COMPLETE.md  V040_DEV_MODE_COMPLETE.md  V040_IMPLEMENTATION_SUMMARY.txt  V040_SECURITY_NOTES.md  V041_DELIVERY_PACKAGE.md  (+49 more)
.claude/: settings.local.json
backend/: api.py  database.py  models.py  ollama_adapter.py
data/: marcus_v052.db
docs/: AGENTS.md  ARCHITECTURE.md  CODE_OWNERSHIP.md  DEPENDENCIES.md  ENTRYPOINTS.md  REPO_MAP.md  ROADMAP.md  SECURITY.md  SETUP_WINDOWS.md  V02_RELEASE_NOTES.md  V041_UI_COMPLETE.md  V048_DAILY_HARDENING_COMPLETE.md  V048_QUICK_REFERENCE.md  V049_FINAL_LOCK.md  V049_MARCUS_MODE_COMPLETE.md  V050_DEPLOYMENT_CHECKLIST.md  V050_LAUNCH_PACK_COMPLETE.md  v047a_inbox_quick_add.md
frontend/: app.js  index.html  style.css
marcus_app/: __init__.py
marcus_v052/: .gitignore  (+2 more)
(+157 files in other folders)
